DMS合并到TSS中